Prevent buttons from appearing selected after unclicking on iOS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,3 +158,8 @@ button:hover .glyphicon {
 .watchlist-active, #watchlist-btn:hover {
   color:red;
 }
+
+/* prevent buttons on iOS from appearing depressed when focused */
+.btn:hover {
+    background-color: white;
+}
